# riviso

./: .editorconfig  .gitignore  .vercelignore  ACTION_PLAN.md  AI_IMPLEMENTATION_SUMMARY.md  AI_SYSTEM_FLOW.md  BACKEND_DEPLOYMENT_GUIDE.md  BACKEND_QUICK_SETUP.md  BUILD_VERIFICATION_REPORT.md  BUILD_VERSION_REPORT.md  CLAUDE.md  CRO_INTELLIGENCE_ENGINE.md  CTO_MVP_REVIEW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_FINAL.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FINAL_BUILD_TEST_REPORT.md  FINAL_ONPAGE_SEO_COMPLETE.md  FIX_GSC_REDIRECT_URI.md  FIX_REDIRECT_URI_MISMATCH.md  FRONTEND_STATUS.md  GETTING_STARTED.md  GITHUB_PUSH_INSTRUCTIONS.md  GOOGLE_OAUTH_SETUP.md  GOOGLE_SEARCH_CONSOLE_FIX.md  GSC_FIX_APPLIED.md  GSC_IMPLEMENTATION_CHECKLIST.md  GSC_INTEGRATION_GUIDE.md  LICENSE  Makefile  OAUTH_FIX_SUMMARY.md  ON_PAGE_SEO_SECTIONS_ADDED.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  QUICK_FIX_GSC_CONNECTION.md  QUICK_FIX_SUMMARY.md  RAILWAY_SETUP_GUIDE.md  README.md  (+34 more)
.github/workflows/: ci.yaml
.turbo/daemon/: 3c5e4a3e14781925-turbo.log.2025-09-02  3c5e4a3e14781925-turbo.log.2025-09-03  3c5e4a3e14781925-turbo.log.2025-09-04  3c5e4a3e14781925-turbo.log.2025-09-05  3c5e4a3e14781925-turbo.log.2025-09-06  3c5e4a3e14781925-turbo.log.2025-09-07  3c5e4a3e14781925-turbo.log.2025-09-08
apps/backend/: .env.example  ARCHITECTURE.md  Dockerfile  Dockerfile.backup  nixpacks.toml  package.json  railway.json
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/common/: README.md
apps/backend/src/infrastructure/: DATA_LAYER.md
apps/frontend/: DESIGN_SYSTEM.md  Dockerfile  FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  next.config.js  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: AddWebsitePrompt.tsx  CircularProgress.tsx  DashboardLayout.tsx  GSCRecommendationBanner.tsx  OnboardingModal.tsx  WebsiteSelector.tsx
apps/frontend/src/contexts/: WebsiteContext.tsx
apps/frontend/src/lib/: api.ts  auth.ts  off-page-seo-metric-info.ts  technical-seo-metric-info.ts
apps/web/: GOOGLE_API_SETUP.md  eslint.config.js  next.config.mjs  package.json  tailwind.config.ts  test-login.js  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/components/: AuditUsageDisplay.tsx  DashboardLayout.tsx  DashboardOverview.tsx  Footer.tsx  GlobalSearchInput.tsx  Header.tsx  LoadingScreen.tsx  ProtectedRoute.tsx  RoleBasedDashboard.tsx  RuleTable.tsx  ScoreGauge.tsx  Spinner.tsx  TopFixes.tsx
apps/web/src/contexts/: AuthContext.tsx  GlobalSearchContext.tsx
apps/web/src/lib/: auditLimits.ts  auditTracker.ts  auditTrackerClient.ts  database.ts  fetchJson.ts  roles.ts  scoreColors.ts  toolDetector.ts
docker/: docker-compose.yml
docs/: architecture.md  metric-availability.md  off-page-engine.md  off-page-seo-audit-framework.md  onboarding.md  scraping-engine-design.md  search-console-dashboard.md  system-flow.md  technical-seo-engine-architecture.md  technical-seo-metrics.md  technical-seo-philosophy.md
infra/: docker-compose.yml  init.sql
scripts/: README.md  create-db.js  restart-system.sh  setup.sh  stop-system.sh
services/audit-api/: .env.example  Dockerfile  GET_API_KEY.md  README.md  alembic.ini  gunicorn.conf.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  setup_api_key.py  start.py  start.sh  test_pagespeed_api.py  test_startup.py
services/audit-api/migrations/: env.py
services/audit-api/migrations/versions/: 0e89c58b9d7b_initial_migration.py  40e55d3fe354_add_user_id_to_audits.py  add_detected_tools_field.py  dbdfe8ce2562_add_top_keywords_field_to_audits_table.py
services/audit-api/rules/: v1.yaml
services/audit-api/src/: audit_limits.py  config.py  db.py  main.py  models.py  simple_main.py
services/audit-api/src/audit/: __init__.py  audit_engine.py  fetcher.py  parser.py  rules_engine.py  scoring.py  security.py  sitemap.py  tool_detector.py
services/audit-api/src/audit/evaluators/: __init__.py  operators.py
services/audit-api/src/audit/providers/: __init__.py
services/audit-api/src/audit/providers/backlinks/: __init__.py  ahrefs.py
services/audit-api/src/audit/providers/performance/: __init__.py  psi.py
services/audit-api/src/audit/providers/serp/: __init__.py  bing.py
services/audit-api/src/routers/: __init__.py  audits.py  health.py
services/audit-api/src/workers/: runner.py
services/audit-api/tests/: __init__.py  test_audit_flow.py  test_security.py
tools/scraper-engine/: README.md  pyproject.toml  requirements.txt  run.py
tools/scraper-engine/src/scraper_engine/: __init__.py  api.py  config.py  crawler.py  extractor.py  graph.py  storage.py
tools/scraper-engine/src/scraper_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+289 files in other folders)
